[package]
name = "rc4md5cry"
version = "0.1.0"
authors = ["DuckSoft <realducksoft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.4"
rust-crypto = "0.2.36"
clap = "3.0.0-beta.2"
hex = "*"
byteorder = "*"
rand = "*"